连接信息
